Added additional testing boss, incomplete fear behavior in preparation for secret crew

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 AldersAdditions.code-workspace
 ../Projects
+modorder.json
+FTL-Multiverse-Fusion-new3.zip
+Multiverse - TRC 2.5.zip
+Multiverse 5.4.5 - Assets (Patch above Data).zip
+Multiverse 5.4.6 - Data (Test Save).zip
+Multiverse 5.4.6 - Data.zip
