Added logic for multiple weapons, cores, and resistant rooms.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 AldersAdditions.code-workspace
+.vscode
 ../Projects
 modorder.json
 FTL-Multiverse-Fusion-new3.zip
@@ -6,3 +7,7 @@ Multiverse - TRC 2.5.zip
 Multiverse 5.4.5 - Assets (Patch above Data).zip
 Multiverse 5.4.6 - Data (Test Save).zip
 Multiverse 5.4.6 - Data.zip
+Fusion.zip
+AI.Cruiser.zip
+Vertex-Util.ftl
+FTL-Multiverse-Fusion-main.zip
