Fear code still broken, but not in the same way. Lua updated, as well as cores and audio.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ Multiverse 5.4.5 - Assets (Patch above Data).zip
 Multiverse 5.4.6 - Data (Test Save).zip
 Multiverse 5.4.6 - Data.zip
 Fusion.zip
+Print_Mouse_Position.zip
 AI.Cruiser.zip
 Vertex-Util.ftl
 FTL-Multiverse-Fusion-main.zip
